--- a/PartyInvites/Web.config
+++ b/PartyInvites/Web.config
@@ -10,6 +10,15 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <system.net>
+	<mailSettings>
+		<smtp deliveryMethod="SpecifiedPickupDirectory">
+			<network host="ignored" />
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\temp\email" />
+		</smtp>
+	</mailSettings>
+  </system.net>
+	
   <system.web>
     <compilation debug="true" targetFramework="4.6.2"/>
     <httpRuntime targetFramework="4.6.2"/>
